--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,14 +10,14 @@
     <div class="container">
 
       <header class="page-header">
-        <a class="page-header__logo logo" href="#">
+        <a class="page-header__logo logo" href="#" aria-label="Логотип">
           <picture>
-            <img class="logo__img" src="img/logotype-mobile.svg" srcset="img/logotype-mobile@2x.svg 2x" alt="Логотип">
+            <img class="logo__img" src="img/logotype-mobile.svg" alt="Логотип">
           </picture>
         </a>
 
         <nav class="main-nav main-nav--closed main-nav--nojs">
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="main-nav__toggle" type="button" aria-label="Открыть меню"><span class="visually-hidden">Открыть меню</span></button>
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
             <li class="main-nav__item"><a class="main-nav__link main-nav__link--current" href="catalog.html">Фото и видео</a></li>
@@ -29,20 +29,22 @@
 
       <main class="page-main">
         <section class="intro">
-          <picture class="intro__picture">
-            <source media="(min-width: 1200px)" srcset="img/sedona-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/sedona-tablet.svg">
-            <img class="intro__img" src="img/sedona.svg" alt="Седона">
-          </picture>
+          <div class="intro__inner">
+            <picture class="intro__picture">
+              <source media="(min-width: 1200px)" srcset="img/sedona-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/sedona-tablet.svg">
+              <img class="intro__img" src="img/sedona.svg" alt="Седона">
+            </picture>
+          </div>
+          <div class="intro__description">
+            <h2 class="intro__title">Фото и видео</h2>
+            <p class="intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+          </div>
         </section>
         <h1 class="visually-hidden">Фото и видео Седоны</h1>
 
         <section class="gallery">
           <div class="gallery__inner">
-            <div class="gallery__description">
-              <h2 class="gallery__title">Фото и видео</h2>
-              <p class="gallery__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-            </div>
             <ul class="gallery__list">
               <li class="gallery__item gallery__item--1">
                 <article class="gallery-card">
@@ -57,7 +59,7 @@
                       <p class="gallery-card__text">Автор фото: Борис</p>
                     </div>
                     <div class="gallery-card__likes">
-                      <button class="gallery-card__button"></button>
+                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка"></button>
                       <span class="gallery-card__number">1350</span>
                     </div>
                   </div>
@@ -76,7 +78,7 @@
                       <p class="gallery-card__text">Автор фото: Сергей</p>
                     </div>
                     <div class="gallery-card__likes">
-                      <button class="gallery-card__button"></button>
+                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка"></button>
                       <span class="gallery-card__number">143</span>
                     </div>
                   </div>
@@ -95,7 +97,7 @@
                       <p class="gallery-card__text">Автор фото: Петр</p>
                     </div>
                     <div class="gallery-card__likes">
-                      <button class="gallery-card__button"></button>
+                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка"></button>
                       <span class="gallery-card__number">96</span>
                     </div>
                   </div>
@@ -114,7 +116,7 @@
                       <p class="gallery-card__text">Автор фото: Антон</p>
                     </div>
                     <div class="gallery-card__likes">
-                      <button class="gallery-card__button"></button>
+                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка"></button>
                       <span class="gallery-card__number">254</span>
                     </div>
                   </div>
@@ -139,16 +141,16 @@
             <div class="video__toolbar toolbar">
               <div class="toolbar__timeline">
                 <div class="toolbar__time-scale"></div>
-                <div class="toolbar__time-toggle" tabindex="0" style="right: 25%"></div>
+                <div class="toolbar__time-toggle"></div>
               </div>
               <div class="toolbar__controls">
-                <button class="video__reload" type="button">
+                <button class="video__reload" type="button" aria-label="Включить видео сначала">
                   <span class="visually-hidden">Включить видео сначала</span>
                 </button>
-                <button class="video__subtitles" type="button">
+                <button class="video__subtitles" type="button" aria-label="Включить субтитры">
                   <span class="visually-hidden">Включить субтитры</span>
                 </button>
-                <button class="video__full-screen" type="button">
+                <button class="video__full-screen" type="button" aria-label="Раскрыть видео на весь экран">
                   <span class="visually-hidden">Раскрыть видео на весь экран</span>
                 </button>
 
@@ -167,13 +169,13 @@
           <section class="page-footer__social social">
             <ul class="social__list">
               <li class="social__item">
-                <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">facebook</span></a>
+                <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"><span class="visually-hidden">facebook</span></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">vkontakte</span></a>
+                <a class="social__link social__link--vkontakte" href="#" aria-label="Вконтакте"><span class="visually-hidden">vkontakte</span></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">instagram</span></a>
+                <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"><span class="visually-hidden">instagram</span></a>
               </li>
             </ul>
           </section>
