--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,6 +12,8 @@
       <header class="page-header">
         <a class="page-header__logo logo" href="#" aria-label="Логотип">
           <picture>
+            <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg" >
             <img class="logo__img" src="img/logotype-mobile.svg" alt="Логотип">
           </picture>
         </a>
@@ -21,6 +23,7 @@
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
             <li class="main-nav__item"><a class="main-nav__link main-nav__link--current" href="catalog.html">Фото и видео</a></li>
+            <li class="main-nav__item main-nav__item--special"><a class="main-nav__link" href="#"></a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="form.html">Форма отзыва</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="https://htmlacademy.ru">HTMLAcademy</a></li>
           </ul>
@@ -59,7 +62,9 @@
                       <p class="gallery-card__text">Автор фото: Борис</p>
                     </div>
                     <div class="gallery-card__likes">
-                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка"></button>
+                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка">
+                        <svg class="gallery-card__icon" width="23" height="21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.964 3.78l-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62zM2.09 10.5v8.4-8.4zM13.8 0L6.9 6.93c-.418.315-.627.84-.627 1.47v10.5c0 1.155.94 2.1 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23c0-1.155-.94-2.1-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0zM4.182 8.4H0V21h4.182V8.4z" fill="currentColor"/></svg>
+                      </button>
                       <span class="gallery-card__number">1350</span>
                     </div>
                   </div>
@@ -78,7 +83,9 @@
                       <p class="gallery-card__text">Автор фото: Сергей</p>
                     </div>
                     <div class="gallery-card__likes">
-                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка"></button>
+                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка">
+                        <svg class="gallery-card__icon" width="23" height="21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.964 3.78l-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62zM2.09 10.5v8.4-8.4zM13.8 0L6.9 6.93c-.418.315-.627.84-.627 1.47v10.5c0 1.155.94 2.1 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23c0-1.155-.94-2.1-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0zM4.182 8.4H0V21h4.182V8.4z" fill="currentColor"/></svg>
+                      </button>
                       <span class="gallery-card__number">143</span>
                     </div>
                   </div>
@@ -97,7 +104,9 @@
                       <p class="gallery-card__text">Автор фото: Петр</p>
                     </div>
                     <div class="gallery-card__likes">
-                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка"></button>
+                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка">
+                        <svg class="gallery-card__icon" width="23" height="21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.964 3.78l-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62zM2.09 10.5v8.4-8.4zM13.8 0L6.9 6.93c-.418.315-.627.84-.627 1.47v10.5c0 1.155.94 2.1 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23c0-1.155-.94-2.1-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0zM4.182 8.4H0V21h4.182V8.4z" fill="currentColor"/></svg>
+                      </button>
                       <span class="gallery-card__number">96</span>
                     </div>
                   </div>
@@ -116,7 +125,9 @@
                       <p class="gallery-card__text">Автор фото: Антон</p>
                     </div>
                     <div class="gallery-card__likes">
-                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка"></button>
+                      <button class="gallery-card__button" type="button" aria-label="Нажми, если понравилась картинка">
+                        <svg class="gallery-card__icon" width="23" height="21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.964 3.78l-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62zM2.09 10.5v8.4-8.4zM13.8 0L6.9 6.93c-.418.315-.627.84-.627 1.47v10.5c0 1.155.94 2.1 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23c0-1.155-.94-2.1-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0zM4.182 8.4H0V21h4.182V8.4z" fill="currentColor"/></svg>
+                      </button>
                       <span class="gallery-card__number">254</span>
                     </div>
                   </div>
@@ -145,12 +156,24 @@
               </div>
               <div class="toolbar__controls">
                 <button class="video__reload" type="button" aria-label="Включить видео сначала">
+                  <svg class="video__icon" width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8 4V0L3 5L8 10V6C11.3 6 14 8.7 14 12C14 15.3 11.3 18 8 18C4.7 18 2 15.3 2 12H0C0 16.4 3.6 20 8 20C12.4 20 16 16.4 16 12C16 7.6 12.4 4 8 4Z" fill="currentColor"/>
+                  </svg>
                   <span class="visually-hidden">Включить видео сначала</span>
                 </button>
                 <button class="video__subtitles" type="button" aria-label="Включить субтитры">
+                  <svg class="video__icon" width="32" height="20" viewBox="0 0 32 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M29 0H3C1.3 0 0 1.3 0 3V17C0 18.7 1.3 20 3 20H29C30.7 20 32 18.7 32 17V3C32 1.3 30.7 0 29 0ZM14.4 15.9C13.9 16 13.3 16 12.7 16C12 16 11.3 15.9 10.7 15.7C10.1 15.5 9.5 15.1 9.1 14.7C8.7 14.3 8.3 13.6 8 12.8C7.7 12 7.6 11.1 7.6 10C7.6 8.9 7.8 7.9 8.1 7.1C8.4 6.3 8.8 5.7 9.3 5.2C9.8 4.7 10.4 4.4 11 4.2C11.5 4.1 12.2 4 12.8 4C13.5 4 14 4 14.5 4.1C15 4.2 15.3 4.3 15.6 4.4L15.2 6.3C14.9 6.2 14.6 6.1 14.3 6C13.9 6 13.5 6 13 6C12.1 6 11.4 6.3 10.8 7C10.2 7.7 10 8.7 10 10C10 10.6 10.1 11.1 10.2 11.6C10.3 12.1 10.5 12.5 10.8 12.9C11.1 13.2 11.4 13.5 11.8 13.7C12.2 13.9 12.7 14 13.2 14C13.7 14 14.1 14 14.5 13.9C14.8 13.8 15.1 13.7 15.4 13.5L15.9 15.3C15.4 15.6 14.9 15.7 14.4 15.9ZM23.1 15.9C22.6 16 22 16 21.4 16C20.7 16 20 15.9 19.4 15.7C18.8 15.5 18.2 15.1 17.8 14.7C17.3 14.2 16.9 13.6 16.7 12.8C16.4 12 16.3 11.1 16.3 10C16.3 8.9 16.5 7.9 16.8 7.1C17.1 6.3 17.5 5.7 18 5.2C18.5 4.7 19.1 4.4 19.7 4.2C20.2 4.1 20.9 4 21.5 4C22.2 4 22.7 4 23.2 4.1C23.7 4.2 24 4.3 24.3 4.4L23.9 6.3C23.6 6.2 23.3 6.1 23 6C22.6 6 22.2 6 21.7 6C20.8 6 20.1 6.3 19.5 7C18.9 7.7 18.7 8.7 18.7 10C18.7 10.6 18.8 11.1 18.9 11.6C19 12.1 19.2 12.5 19.5 12.9C19.8 13.2 20.1 13.5 20.5 13.7C20.9 13.9 21.4 14 21.9 14C22.4 14 22.8 14 23.2 13.9C23.5 13.8 23.8 13.7 24.1 13.5L24.6 15.3C24.1 15.6 23.6 15.7 23.1 15.9Z" fill="currentColor"/>
+                  </svg>
                   <span class="visually-hidden">Включить субтитры</span>
                 </button>
                 <button class="video__full-screen" type="button" aria-label="Раскрыть видео на весь экран">
+                  <svg class="video__icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0V3V6H3V3H6V0H3H0Z" fill="currentColor"/>
+                    <path d="M3 14H0V17V20H3H6V17H3V14Z" fill="currentColor"/>
+                    <path d="M17 0H14V3H17V6H20V3V0H17Z" fill="currentColor"/>
+                    <path d="M17 17H14V20H17H20V17V14H17V17Z" fill="currentColor"/>
+                  </svg>
                   <span class="visually-hidden">Раскрыть видео на весь экран</span>
                 </button>
 
@@ -169,42 +192,38 @@
           <section class="page-footer__social social">
             <ul class="social__list">
               <li class="social__item">
-                <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук"><span class="visually-hidden">facebook</span></a>
+                <a class="social__link social__link--twitter" href="#" aria-label="Твиттер">
+                  <svg class="social__icon" width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z" fill="currentColor"/>
+                  </svg>
+                </a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--vkontakte" href="#" aria-label="Вконтакте"><span class="visually-hidden">vkontakte</span></a>
+                <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук">
+                  <svg class="social__icon" width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z" fill="currentColor"/>
+                  </svg>
+                </a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм"><span class="visually-hidden">instagram</span></a>
+                <a class="social__link social__link--youtube" href="#" aria-label="Ютуб">
+                  <svg class="social__icon" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z" fill="currentColor"/>
+                  </svg>
+                </a>
               </li>
             </ul>
           </section>
 
           <div class="page-footer__copyright copyright">
             <p class="copyright__text">Разработано</p>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"></a>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <svg class="copyright__icon" width="27" height="35" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0zM25 12.1L13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9zM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8zM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9z" fill="currentColor"/></svg>
+            </a>
           </div>
         </div>
 
       </footer>
-
-      <script>
-        var navMain = document.querySelector('.main-nav');
-        var navToggle = document.querySelector('.main-nav__toggle');
-
-        navMain.classList.remove('main-nav--nojs');
-
-        navToggle.addEventListener('click', function () {
-          if (navMain.classList.contains('main-nav--closed')) {
-            navMain.classList.remove('main-nav--closed');
-            navMain.classList.add('main-nav--opened');
-          } else {
-            navMain.classList.add('main-nav--closed');
-            navMain.classList.remove('main-nav--opened');
-          }
-        });
-
-      </script>
     </div>
   </body>
 </html>
