--- a/source/index.html
+++ b/source/index.html
@@ -25,11 +25,10 @@
           </div>
 
           <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link main-nav__link--current" href="index.html">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Фото и видео</a></li>
-            <li class="main-nav__item main-nav__item--special"><a class="main-nav__link" href="#"></a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Форма отзыва</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="https://htmlacademy.ru">HTMLAcademy</a></li>
+            <li class="main-nav__item main-nav__item--1"><a class="main-nav__link main-nav__link--current" href="index.html">Главная</a></li>
+            <li class="main-nav__item main-nav__item--2"><a class="main-nav__link" href="catalog.html">Фото и видео</a></li>
+            <li class="main-nav__item main-nav__item--3"><a class="main-nav__link" href="form.html">Форма отзыва</a></li>
+            <li class="main-nav__item main-nav__item--4"><a class="main-nav__link" href="https://htmlacademy.ru">HTMLAcademy</a></li>
           </ul>
         </nav>
       </header>
@@ -37,11 +36,11 @@
       <main class="page-main">
         <section class="promo">
           <div class="promo__inner">
-            <picture class="promo__picture">
-              <!-- <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
-              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg"> -->
+            <!-- <picture class="promo__picture">
+              <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
+              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg">
               <img class="promo__img" src="img/text-index.svg" alt="Название">
-            </picture>
+            </picture> -->
           </div>
           <div class="promo__description">
             <h2 class="promo__title">Седона — небольшой городок в Аризоне, заслуживающего большего</h2>
