--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,13 +19,16 @@
         </a>
 
         <nav class="main-nav main-nav--closed main-nav--nojs">
-          <button class="main-nav__toggle" type="button" aria-label="Открыть меню"><span class="visually-hidden">Открыть меню</span></button>
+
+          <div class="main-nav__dropdown">
+            <button class="main-nav__toggle" type="button" aria-label="Открыть меню"><span class="visually-hidden">Открыть меню</span></button>
+          </div>
+
           <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link main-nav__link--current" href="catalog.html">Фото и видео</a></li>
-            <li class="main-nav__item main-nav__item--special"><a class="main-nav__link" href="#"></a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Форма отзыва</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="https://htmlacademy.ru">HTMLAcademy</a></li>
+            <li class="main-nav__item main-nav__item--1"><a class="main-nav__link" href="index.html">Главная</a></li>
+            <li class="main-nav__item main-nav__item--2"><a class="main-nav__link main-nav__link--current" href="catalog.html">Фото и видео</a></li>
+            <li class="main-nav__item main-nav__item--3"><a class="main-nav__link" href="form.html">Форма отзыва</a></li>
+            <li class="main-nav__item main-nav__item--4"><a class="main-nav__link" href="https://htmlacademy.ru">HTMLAcademy</a></li>
           </ul>
         </nav>
       </header>
