декоративные линии в форме и высота footer

--- a/source/form.html
+++ b/source/form.html
@@ -73,7 +73,7 @@
               </fieldset>
 
               <fieldset class="form__user-contacts user-contacts">
-                <h2 class="form__subtitle form__subtitle--special">Контактная информация:</h2>
+                <h2 class="form__subtitle form__subtitle--special"><span>Контактная информация:</span></h2>
                 <ul class="user-contacts__list">
                   <li class="user-contacts__item">
                     <label class="user-contacts__label" for="tel">Контактный телефон*:</label>
@@ -89,7 +89,7 @@
               </fieldset>
 
               <fieldset class="form__user-opinion user-opinion">
-                <h2 class="form__subtitle">Ваше общее впечатление:</h2>
+                <h2 class="form__subtitle"><span>Ваше общее впечатление:</span></h2>
                 <ul class="user-opinion__list">
                   <li class="user-opinion__item">
                     <label class="user-opinion__label">
@@ -113,7 +113,7 @@
               </fieldset>
 
               <fieldset class="form__user-visited user-visited">
-                <h2 class="form__subtitle form__subtitle--special">Посещенные достопримечательности:</h2>
+                <h2 class="form__subtitle form__subtitle--special"><span>Посещенные достопримечательности:</span></h2>
                 <ul class="user-visited__list">
                   <li class="user-visited__item">
                     <label class="user-visited__label">
@@ -143,7 +143,7 @@
               </fieldset>
 
               <fieldset class="form__user-message user-message">
-                <h2 class="form__subtitle form__subtitle--special">Опишите свои эмоции:</h2>
+                <h2 class="form__subtitle form__subtitle--special"><span>Опишите свои эмоции:</span></h2>
                 <label>
                   <textarea class="user-message__textarea" aria-label="Отзыв пользователя" placeholder="Опишите подробно все свои восторги"></textarea>
                 </label>
