--- a/source/index.html
+++ b/source/index.html
@@ -36,11 +36,11 @@
       <main class="page-main">
         <section class="promo">
           <div class="promo__inner">
-            <!-- <picture class="promo__picture">
-              <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
-              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg">
+            <picture class="promo__picture">
+              <!-- <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
+              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg"> -->
               <img class="promo__img" src="img/text-index.svg" alt="Название">
-            </picture> -->
+            </picture>
           </div>
           <div class="promo__description">
             <h2 class="promo__title">Седона — небольшой городок в Аризоне, заслуживающего большего</h2>
