changing brief-reasons__item settings

--- a/source/index.html
+++ b/source/index.html
@@ -37,8 +37,8 @@
         <section class="promo">
           <div class="promo__inner">
             <picture class="promo__picture">
-              <!-- <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
-              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg"> -->
+              <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
+              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg">
               <img class="promo__img" src="img/text-index.svg" alt="Название">
             </picture>
           </div>
@@ -106,38 +106,29 @@
 
             <li class="reasons__item reasons__item--brief">
               <ul class="brief-reasons">
-                <li class="brief-reasons__item">
-                  <article class="reason-card reason-card--brief">
-                    <div class="reason-card__description">
-                      <div class="reason-card__inner">
-                        <h2 class="reason-card__title">Небольшая площадь</h2>
-                        <p class="reason-card__number">&#8212;№3&#8212;</p>
-                        <p class="reason-card__text">Все интересные места находятся очень близко</p>
-                      </div>
-                    </div>
-                  </article>
+                <li class="brief-reasons__item brief-reasons__item--1">
+                  <div class="reason-card__description">
+                    <h2 class="reason-card__title">Небольшая площадь</h2>
+                    <p class="reason-card__number">&#8212;№3&#8212;</p>
+                    <p class="reason-card__text">Все интересные места находятся очень близко</p>
+                  </div>
+
                 </li>
-                <li class="brief-reasons__item">
-                  <article class="reason-card reason-card--brief">
-                    <div class="reason-card__description">
-                      <div class="reason-card__inner">
-                        <h2 class="reason-card__title">Красивая дорога</h2>
-                        <p class="reason-card__number">&#8212;№4&#8212;</p>
-                        <p class="reason-card__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-                      </div>
-                    </div>
-                  </article>
+                <li class="brief-reasons__item brief-reasons__item--2">
+                  <div class="reason-card__description">
+                    <h2 class="reason-card__title">Красивая дорога</h2>
+                    <p class="reason-card__number">&#8212;№4&#8212;</p>
+                    <p class="reason-card__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                  </div>
+
                 </li>
-                <li class="brief-reasons__item">
-                  <article class="reason-card reason-card--brief">
-                    <div class="reason-card__description">
-                      <div class="reason-card__inner">
-                        <h2 class="reason-card__title">Мало туристов</h2>
-                        <p class="reason-card__number">&#8212;№5&#8212;</p>
-                        <p class="reason-card__text">Большинство едет в Гранд Каньон и толпится там</p>
-                      </div>
-                    </div>
-                  </article>
+                <li class="brief-reasons__item brief-reasons__item--3">
+                  <div class="reason-card__description">
+                    <h2 class="reason-card__title">Мало туристов</h2>
+                    <p class="reason-card__number">&#8212;№5&#8212;</p>
+                    <p class="reason-card__text">Большинство едет в Гранд Каньон и толпится там</p>
+                  </div>
+
                 </li>
               </ul>
             </li>
@@ -148,7 +139,7 @@
         <section class="offers">
           <div class="offers__inner">
             <h2 class="offers__title">Заинтересовались?</h2>
-            <p class="offers__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшиепредложения гостиниц в седоне</p>
+            <p class="offers__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
             <a class="offers__button button" aria-label="Найти гостиницу" href="#">Найти гостиницу</a>
           </div>
         </section>
