--- a/source/index.html
+++ b/source/index.html
@@ -37,8 +37,8 @@
         <section class="promo">
           <div class="promo__inner">
             <picture class="promo__picture">
-              <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
-              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg">
+              <!-- <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
+              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg"> -->
               <img class="promo__img" src="img/text-index.svg" alt="Название">
             </picture>
           </div>
