--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Главная</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="" >
+    <link rel="manifest">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page-body">
