--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Главная</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="" >
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="manifest">
     <link href="css/style.css" rel="stylesheet">
   </head>
