fixing pp for catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Каталог</title>
+    <link rel="icon" href="source/favicon.ico">
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page-body">
@@ -35,10 +39,8 @@
 
       <main class="page-main">
         <section class="intro">
-          <div class="intro__inner">
+          <div class="intro__inner intro__inner--special">
             <picture class="intro__picture">
-              <source media="(min-width: 1200px)" srcset="img/sedona-desktop.svg">
-              <source media="(min-width: 768px)" srcset="img/sedona-tablet.svg">
               <img class="intro__img" src="img/sedona.svg" alt="Седона">
             </picture>
           </div>
