--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Отзывы</title>
+    <link rel="icon" href="source/favicon.ico">
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page-body">
@@ -37,8 +41,6 @@
         <section class="intro">
           <div class="intro__inner">
             <picture class="intro__picture">
-              <!-- <source media="(min-width: 1200px)" srcset="img/sedona-desktop.svg">
-              <source media="(min-width: 768px)" srcset="img/sedona-tablet.svg"> -->
               <img class="intro__img" src="img/sedona.svg" alt="Седона">
             </picture>
           </div>
