--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Главная</title>
-    <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="manifest">
+    <link rel="icon" href="source/favicon.ico">
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/apple.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page-body">
