--- a/source/form.html
+++ b/source/form.html
@@ -159,14 +159,14 @@
         </section>
 
         <div class="modal modal--failure">
-          <h2 class="modal__title">Что-то пошло не так!</h2>
+          <h2 class="modal__title">Что-то пошло<br class="small-hidden"> не так!</h2>
           <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
           <button class="modal__button modal__button--failure button" type="button" aria-label="Ok">Ok</button>
         </div>
         <div class="modal modal--success">
           <div class="modal__inner">
             <h2 class="modal__title">Ваш отзыв отправлен!</h2>
-            <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+            <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br> В ближайшее время мы опубликуем его на сайте.</p>
           </div>
           <div class="modal__controls">
             <button class="modal__button modal__button--success button" type="button" aria-label="Закрыть окно">Закрыть окно</button>
